during menu active on mobile, body scroll issue solved

--- a/styles/less/module2/navbar-slide.less
+++ b/styles/less/module2/navbar-slide.less
@@ -256,6 +256,14 @@
   }//for mobile
 }
 
-
+/**
+ * Body states.
+ *
+ * When a menu is active, we want to hide the overflows on the body to prevent
+ * awkward document scrolling.
+ */
+body.has-active-menu {
+  overflow: hidden;
+}
 
 
